# autonomous-driving-notes

./: .editorconfig  .gitignore  README.md  run_only_pcl.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CARLA/: 00_quickstarts.md  README.md
CARLA/carla-autoware/: 00_quickstarts.md  README.md
Computer Vision/: README.md  ROI.ipynb  hough_transform.ipynb  image_pyramids.ipynb  template.ipynb
Computer Vision/basics/: canny.ipynb  corner_detection.ipynb  hough_opencv.ipynb  perspective_transform.ipynb
Computer Vision/camera-calibration/: README.md
Computer Vision/geometric-transformations/: README.md  affine_transformaion.md  test.md
Computer Vision/lanes-finding-with-computer-vision/: README.md  advance_lane_lines.ipynb  finding_lane_lines.ipynb
Kalman Filters/: README.md  helper.py  kalma_basic.py  kalma_filter.py  kalman.md  kalman.py
Kalman Filters/Gaussian/: README.md  gaussian.md  gaussian.py
LiDAR/: README.md  lidar_basic.md  range_images.md
LiDAR/3D Object Detection/: 00_3d_object_detection.md  01_complex_yolo.md  README.md
Localization/:  bayes_rule.md  README.md
Localization/Markov Localization/: README.md
Localization/Motion Models/: README.md
Localization/Scan Matching/: README.md
Localization/Scan Matching/icp_example/: CMakeLists.txt  README.md  run.sh
Localization/Scan Matching/icp_example/src/: main.cpp
PCL/: README.md  docker-build.sh  run.sh  run_mac.sh
Sensor Fusion/: README.md
Sensor Fusion and Tracking/: README.md  derivation_of_covariance_rotation.md
(+12 files in other folders)
